@@ -1,6 +1,7 @@
 intended v0.2.8
 + if/else statements work as expected again
 + script tags inside function bodies parse
++ reflecting values in input tags works again
 
 v0.2.7
 + Unit tests for parser, resolver, compiler and runtime library
